--- a/package.json
+++ b/package.json
@@ -4,13 +4,38 @@
   "description": "A sub-module for scripture display",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "eslint ./src ./index.js && jest"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx}",
+      "!**/node_modules/**"
+    ],
+    "coverageDirectory": "coverage"
   },
   "repository": {
-    "type": "git"
+    "type": "git",
+    "url": "git+https://github.com/translationCoreApps/ScripturePane.git"
+  },
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/translationCoreApps/ScripturePane/issues"
+  },
+  "homepage": "https://github.com/translationCoreApps/ScripturePane#readme",
+  "devDependencies": {
+    "babel-eslint": "^8.0.0",
+    "babel-jest": "^21.0.2",
+    "babel-plugin-transform-object-rest-spread": "^6.26.0",
+    "babel-preset-env": "^1.6.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "eslint": "^4.7.2",
+    "eslint-plugin-react": "^7.4.0",
+    "jest": "^21.1.0",
+    "react-test-renderer": "^15.6.1"
   },
   "dependencies": {
-    "babel-preset-react": "^6.16.0",
+    "react": "^15.6.1",
     "usfm-parser": "^0.1.6"
   }
 }
