--- a/package.json
+++ b/package.json
@@ -29,13 +29,14 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.7.2",
+    "enzyme": "^2.9.1",
+    "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
     "jest": "^21.1.0",
-    "react-test-renderer": "^15.6.1"
+    "react": "^15.6.2",
+    "react-test-renderer": "^15.6.2"
   },
   "dependencies": {
-    "react": "^15.6.1",
     "usfm-parser": "^0.1.6"
   }
 }
