--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "^7.4.0",
     "jest": "^21.1.0",
     "react": "^15.6.2",
+    "react-bootstrap": "^0.30.10",
     "react-test-renderer": "^15.6.2"
   },
   "dependencies": {
