--- a/package.json
+++ b/package.json
@@ -34,7 +34,13 @@
     "eslint-plugin-react": "^7.4.0",
     "jest": "^21.1.0",
     "react": "^15.6.2",
+    "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.10",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.6",
+    "react-remarkable": "^1.1.3",
     "react-test-renderer": "^15.6.2"
   },
   "dependencies": {
