--- a/package.json
+++ b/package.json
@@ -29,13 +29,23 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
-    "eslint": "^4.7.2",
+    "enzyme": "^2.9.1",
+    "eslint": "^4.10.0",
     "eslint-plugin-react": "^7.4.0",
     "jest": "^21.1.0",
-    "react-test-renderer": "^15.6.1"
+    "react": "^15.6.2",
+    "react-addons-test-utils": "^15.4.2",
+    "react-bootstrap": "^0.30.10",
+    "react-dnd": "^2.5.4",
+    "react-dnd-html5-backend": "^2.5.4",
+    "react-dom": "^15.4.2",
+    "react-redux": "^5.0.6",
+    "react-remarkable": "^1.1.3",
+    "react-test-renderer": "^15.6.2",
+    "usfm-js": "^1.0.0-beta.15",
+    "xregexp": "^3.2.0"
   },
   "dependencies": {
-    "react": "^15.6.1",
     "usfm-parser": "^0.1.6"
   }
 }
