--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "enzyme": "^2.9.1",
     "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1",
+    "fs-extra": "^5.0.0",
     "jest": "^21.1.0",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.4.2",
