--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "eslint-plugin-react": "^7.5.1",
     "fs-extra": "^5.0.0",
     "jest": "^21.1.0",
+    "material-ui": "^0.17.4",
     "react": "^15.6.2",
     "react-addons-test-utils": "^15.4.2",
     "react-bootstrap": "^0.30.10",
