--- a/package.json
+++ b/package.json
@@ -25,28 +25,26 @@
   "devDependencies": {
     "babel-eslint": "^8.0.0",
     "babel-jest": "^21.0.2",
-    "babel-plugin-transform-object-rest-spread": "^6.26.0",
-    "babel-preset-env": "^1.6.0",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "enzyme": "^2.9.1",
+    "babel-plugin-transform-object-rest-spread": "6.26.0",
+    "babel-preset-env": "1.6.1",
+    "babel-preset-es2015": "6.24.1",
+    "babel-preset-react": "6.24.1",
+    "enzyme": "2.9.1",
     "eslint": "^4.13.1",
     "eslint-plugin-react": "^7.5.1",
-    "fs-extra": "^5.0.0",
+    "fs-extra": "3.0.1",
     "jest": "^21.1.0",
-    "material-ui": "^0.17.4",
-    "react": "^15.6.2",
+    "material-ui": "0.17.4",
     "react-addons-test-utils": "^15.4.2",
-    "react-bootstrap": "^0.30.10",
-    "react-container-dimensions": "^1.3.3",
-    "react-dnd": "^2.5.4",
-    "react-dnd-html5-backend": "^2.5.4",
-    "react-dom": "^15.4.2",
-    "react-redux": "^5.0.6",
-    "react-remarkable": "^1.1.3",
+    "react-bootstrap": "^0.32.0",
+    "react-container-dimensions": "1.3.3",
+    "react-dnd": "2.5.4",
+    "react-dnd-html5-backend": "2.5.4",
+    "react-redux": "5.0.6",
+    "react-remarkable": "1.1.3",
     "react-test-renderer": "^15.6.2",
-    "usfm-js": "^1.0.0-beta.17",
-    "xregexp": "^3.2.0"
+    "usfm-js": "1.0.0-beta.17.2",
+    "xregexp": "3.2.0"
   },
   "dependencies": {
     "prop-types": "^15.6.0",
