--- a/package.json
+++ b/package.json
@@ -11,7 +11,11 @@
       "src/**/*.{js,jsx}",
       "!**/node_modules/**"
     ],
-    "coverageDirectory": "coverage"
+    "coverageDirectory": "coverage",
+    "setupFiles": [
+      "./testSetUp/shim.js",
+      "./testSetUp/enzyme.js"
+    ]
   },
   "repository": {
     "type": "git",
@@ -23,31 +27,29 @@
   },
   "homepage": "https://github.com/translationCoreApps/ScripturePane#readme",
   "devDependencies": {
-    "babel-eslint": "^8.0.0",
-    "babel-jest": "^21.0.2",
+    "babel-eslint": "8.0.0",
+    "babel-jest": "21.0.2",
     "babel-plugin-transform-object-rest-spread": "6.26.0",
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
-    "enzyme": "2.9.1",
-    "eslint": "^4.13.1",
-    "eslint-plugin-react": "^7.5.1",
+    "enzyme": "3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
+    "eslint": "4.15.0",
+    "eslint-plugin-react": "7.5.1",
     "fs-extra": "3.0.1",
-    "jest": "^21.1.0",
+    "jest": "21.1.0",
     "material-ui": "0.17.4",
-    "react-addons-test-utils": "^15.4.2",
-    "react-bootstrap": "^0.32.0",
+    "react": "^16.2.0",
+    "react-addons-test-utils": "^15.6.2",
+    "react-bootstrap": "0.32.0",
     "react-container-dimensions": "1.3.3",
-    "react-dnd": "2.5.4",
-    "react-dnd-html5-backend": "2.5.4",
-    "react-redux": "5.0.6",
-    "react-remarkable": "1.1.3",
+    "react-dom": "^16.2.0",
     "react-test-renderer": "^15.6.2",
     "usfm-js": "1.0.0-beta.17.2",
     "xregexp": "3.2.0"
   },
   "dependencies": {
-    "prop-types": "^15.6.0",
-    "usfm-parser": "^0.1.6"
+    "prop-types": "15.6.0"
   }
 }
