--- a/package.json
+++ b/package.json
@@ -34,20 +34,19 @@
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
     "enzyme": "3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
+    "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.15.0",
     "eslint-plugin-react": "7.5.1",
-    "fs-extra": "3.0.1",
+    "fs-extra": "5.0.0",
     "jest": "21.1.0",
-    "material-ui": "0.17.4",
-    "react-addons-test-utils": "^15.6.2",
+    "material-ui": "0.20.0",
+    "react-addons-test-utils": "15.6.2",
     "react-bootstrap": "0.32.0",
-    "react-container-dimensions": "1.3.3",
-    "react-test-renderer": "^15.6.2",
-    "usfm-js": "1.0.0-beta.17.2",
-    "xregexp": "3.2.0"
+    "react-container-dimensions": "1.3.3"
   },
   "dependencies": {
-    "prop-types": "15.6.0"
+    "prop-types": "15.6.0",
+    "xregexp": "3.2.0",
+    "usfm-js": "1.0.0-beta.17.2"
   }
 }
