--- a/package.json
+++ b/package.json
@@ -42,15 +42,25 @@
     "material-ui": "0.20.0",
     "react-addons-test-utils": "15.6.2",
     "react-bootstrap": "0.32.0",
-    "react-container-dimensions": "1.3.3"
-  },
-  "dependencies": {
-    "prop-types": "15.6.0",
+    "react-container-dimensions": "1.3.3",
     "react": "16.2.0",
     "react-dom": "16.2.0",
+    "prop-types": "15.6.0",
+    "react-redux": "^5.0.7",
+    "redux": "^3.7.2"
+  },
+  "dependencies": {
+    "deep-equal": "^1.0.1",
     "string-punctuation-tokenizer": "^0.7.0",
+    "tc-tool": "^1.2.0",
     "usfm-js": "1.0.0-beta.23",
-    "xregexp": "3.2.0",
-    "deep-equal": "^1.0.1"
+    "xregexp": "3.2.0"
+  },
+  "peerDependencies": {
+    "react": "^16.0.0",
+    "react-dom": "^16.0.0",
+    "prop-types": "^15.0.0",
+    "react-redux": "^5.0.0",
+    "redux": "^2.0.0 || ^3.0.0"
   }
 }
