--- a/package.json
+++ b/package.json
@@ -42,14 +42,14 @@
     "material-ui": "0.20.0",
     "react-addons-test-utils": "15.6.2",
     "react-bootstrap": "0.32.0",
-    "react-container-dimensions": "1.3.3"
+    "react-container-dimensions": "1.3.3",
+    "react-test-renderer": "^16.2.0"
   },
   "dependencies": {
-    "deep-equal": "^1.0.1",
+    "deep-equal": "1.0.1",
     "prop-types": "15.6.0",
     "react": "16.2.0",
     "react-dom": "16.2.0",
-    "react-test-renderer": "^16.2.0",
     "string-punctuation-tokenizer": "^0.7.0",
     "usfm-js": "1.0.0-beta.23",
     "xregexp": "3.2.0"
