--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.15.0",
+    "eslint-plugin-jest": "21.12.2",
     "eslint-plugin-react": "7.5.1",
     "fs-extra": "5.0.0",
     "jest": "21.1.0",
