--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "setupFiles": [
       "./testSetUp/shim.js",
       "./testSetUp/enzyme.js"
-    ]
+    ],
+    "snapshotSerializers": ["enzyme-to-json/serializer"]
   },
   "repository": {
     "type": "git",
@@ -53,6 +54,7 @@
   },
   "dependencies": {
     "deep-equal": "^1.0.1",
+    "enzyme-to-json": "^3.3.3",
     "string-punctuation-tokenizer": "^0.7.0",
     "tc-tool": "^1.3.0",
     "usfm-js": "1.0.0-beta.23",
