Working on localization

--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "react": "16.2.0",
     "react-dom": "16.2.0",
     "string-punctuation-tokenizer": "^0.7.0",
+    "tc-tool": "1.1.0",
     "usfm-js": "1.0.0-beta.23",
     "xregexp": "3.2.0"
   }
