--- a/.travis.yml
+++ b/.travis.yml
@@ -1,15 +1,17 @@
 sudo: false
 language: node_js
 node_js:
-  - 6
+  - 8
 os:
   - linux
 before_install:
-  - npm i -g npm@5.1.0
+  - npm i -g npm@5.6.0
   - npm --version
 install:
   - npm i
-  - npm i -g jest codecov
+  - npm i -g jest eslint codecov
+before_script:
+  - if [[ "$TRAVIS_BRANCH" == "master" || "$TRAVIS_BRANCH" == "develop" ]]; then gulp crowdin; fi
 script:
   - eslint ./src && jest --coverage
   - codecov
