--- a/package.json
+++ b/package.json
@@ -16,7 +16,9 @@
       "./testSetUp/shim.js",
       "./testSetUp/enzyme.js"
     ],
-    "snapshotSerializers": ["enzyme-to-json/serializer"]
+    "snapshotSerializers": [
+      "enzyme-to-json/serializer"
+    ]
   },
   "repository": {
     "type": "git",
@@ -34,22 +36,24 @@
     "babel-preset-env": "1.6.1",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-react": "6.24.1",
+    "crowdin-api": "^2.0.2",
     "enzyme": "3.3.0",
     "enzyme-adapter-react-16": "1.1.1",
     "eslint": "4.15.0",
     "eslint-plugin-jest": "21.12.2",
     "eslint-plugin-react": "7.5.1",
     "fs-extra": "5.0.0",
+    "gulp": "^3.9.1",
     "jest": "21.1.0",
     "material-ui": "0.20.0",
-    "react-addons-test-utils": "15.6.2",
-    "react-test-renderer": "^16.2.0",
     "prop-types": "15.6.0",
     "react": "16.2.0",
+    "react-addons-test-utils": "15.6.2",
     "react-bootstrap": "0.32.0",
     "react-container-dimensions": "1.3.3",
     "react-dom": "16.2.0",
     "react-redux": "^5.0.7",
+    "react-test-renderer": "^16.2.0",
     "redux": "^3.7.2"
   },
   "dependencies": {
